Fix for layout shift with the name conflict icon visible

--- a/codepulse/src/main/resources/toserve/pages/traces/traces.css
+++ b/codepulse/src/main/resources/toserve/pages/traces/traces.css
@@ -187,7 +187,7 @@ body > .overlay:before {
 	display: initial;
 	position: absolute;
 	bottom: -4px;
-	left: 0;
+	left: 5px;
 	white-space: nowrap;
 	line-height: 14px;
 	font-size: 12px;
